--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Houssem-Eddine Gueziri, Ph. D.
 email: 
 description: 
-baseurl: "/Mekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://ifedyukin.github.io" # the base hostname & protocol for your site
 postCount: 5 # the number of posts on the "index" page
 
